# hedisgraph

./: CHANGELOG.md  LICENSE  README.md  hedisgraph.cabal  hie.yaml  stack.yaml
.github/workflows/: ci.yml
hedisgraph-hasbolt/: .gitignore  CHANGELOG.md  README.md  cabal.project  hedisgraph-hasbolt.cabal  hie.yaml
hedisgraph-hasbolt/src/Database/Bolt/: Compatibility.hs
hedisgraph-hasbolt/test/Database/Bolt/: CompatibilitySpec.hs
src/: Hedisgraph.hs
src/Database/: RedisGraph.hs
test/Database/: RedisGraphSpec.hs
