cabal-version:       2.4
name:                hedisgraph
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/odanoburu/hedisgraph
bug-reports:         https://github.com/odanoburu/hedisgraph/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              bruno cuconato
maintainer:          bruno cuconato <bcclaro+haskell@gmail.com>
copyright:           2020 bruno cuconato
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/odanoburu/hedisgraph.git

common common-options
  build-depends:       base >= 4.12.0.0 && <= 4.15,
                       containers == 0.6.*,
                       hedis == 0.12.*,
                       bytestring == 0.10.*,
                       text == 1.2.*

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  default-extensions:   OverloadedStrings,
                        RecordWildCards,
                        TupleSections,
                        NamedFieldPuns,
                        DuplicateRecordFields,
                        DisambiguateRecordFields,
                        LambdaCase
  exposed-modules:     Database.RedisGraph

test-suite hedisgraph-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Database.RedisGraphSpec
  hs-source-dirs:
      test
  default-extensions: DisambiguateRecordFields DuplicateRecordFields NamedFieldPuns OverloadedStrings RecordWildCards TupleSections
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hedisgraph, hspec ==2.7.*, string-interpolate == 0.1.*
               , base, containers, hedis, bytestring
  build-tool-depends: hspec-discover:hspec-discover
  default-language: Haskell2010
