cabal-version:       2.4
name:                hedisgraph-hasbolt
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info.
category:            Database
homepage:            https://github.com/odanoburu/hedisgraph-hasbolt
bug-reports:         https://github.com/odanoburu/hedisgraph-hasbolt/issues
license:             BSD-3-Clause
author:              bruno cuconato
maintainer:          bruno cuconato <bcclaro+haskell@gmail.com>
copyright:           2020 bruno cuconato
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/odanoburu/hedisgraph-hasbolt.git

common common-options
  build-depends:       base >= 4.12.0.0 && < 4.14,
                       containers == 0.6.*, text == 1.2.*,
                       bytestring == 0.10.*, hedisgraph, hasbolt == 0.1.*

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  default-extensions:   OverloadedStrings,
                        RecordWildCards,
                        TupleSections,
                        NamedFieldPuns,
                        DuplicateRecordFields,
                        DisambiguateRecordFields
  exposed-modules:     Database.Bolt.Compatibility

test-suite hedisgraph-hasbolt-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Database.Bolt.CompatibilitySpec
  hs-source-dirs:
      test
  default-extensions: DisambiguateRecordFields DuplicateRecordFields NamedFieldPuns OverloadedStrings RecordWildCards TupleSections
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hedisgraph-hasbolt, hspec ==2.7.*, string-interpolate == 0.1.*
               , base, containers, bytestring, hasbolt, hedisgraph
  build-tool-depends: hspec-discover:hspec-discover
  default-language: Haskell2010
